--- a/css/index.css
+++ b/css/index.css
@@ -93,7 +93,7 @@
 
 .search-bar .cart-btn {
     margin: 0px 0px 0px 20px;
-    border: 1px solid #e1251b;
+    /* border: 1px solid #e1251b; */
     width: 100px;
     height: 34px;
     line-height: 34px;
@@ -103,9 +103,18 @@
     cursor: pointer;
 }
 
+.search-bar .iconfont-cart {
+    font-size: 18px;
+    font-weight: bold;
+}
+
 .header .recommend {
     font-size: 12px;
-    padding: 5px 0px 15px 50px;
+    padding: 10px 0px 20px 50px;
+}
+
+.header .recommend2 {
+    padding: 5px 0px 5px 25px;
 }
 
 .header .recommend a {
@@ -114,4 +123,14 @@
 
 .search-box ul li {
     display: inline-block;
+    padding: 0px 10px;
+}
+
+.search-box ul li a {
+    color: #333333;
+    text-decoration: none;
+}
+
+.search-box ul li a:hover {
+    color: #f10215;
 }
