--- a/css/index.css
+++ b/css/index.css
@@ -134,3 +134,110 @@
 .search-box ul li a:hover {
     color: #f10215;
 }
+
+.content .wrapper {
+    margin: 0px auto;
+    width: 1190px;
+    padding: 10px;
+    display: flex;
+}
+
+.menu-box {
+    width: 190px;
+    background: #ffffff;
+    position: relative;
+    padding: 10px 0px;
+    margin-right: 10px;
+}
+
+.menu-box ul li {
+    height: 25px;
+    line-height: 25px;
+    padding: 0px 12px;
+    overflow: hidden;
+}
+
+.menu-box ul li:hover {
+    background: #d9d9d9;
+}
+
+.menu-box ul li:hover .sub-menu {
+    display: block;
+}
+ 
+.menu-box ul li a {
+    color: #333333;
+    text-decoration: none;
+}
+
+.menu-box ul li a:hover {
+    color: #e1251b;
+}
+
+.menu-box .sub-menu {
+    position: absolute;
+    top: 0px;
+    left: 190px;
+    background: #ffffff;
+    z-index: 10px;
+    width: 900px;
+    padding: 20px;
+    font-size: 12px;
+    box-shadow: 2px 0px 5px rgba(0, 0, 0, 0.3);
+    display: none;
+}
+
+.sub-menu .left-box {
+    float: left;
+    max-width: 700px;
+}
+
+.sub-menu .right-box {
+    float: right;
+    max-width: 160px;
+}
+
+.sub-menu .menu-title {
+    margin: 0px 0px 10px 0px;
+}
+
+.sub-menu .menu-title .item {
+    display: inline-block;
+    background: #333333;
+    padding: 0px 8px;
+    margin: 0px 10px 0px 0px;
+    color: #ffffff;
+}
+
+.sub-menu .menu-title .item:hover {
+    color: #e1251b;
+}
+
+.sub-menu dl {
+    display: flex;
+}
+
+.sub-menu dt {
+    font-weight: bold;
+    width: 60px;
+    text-align: right;
+    flex-shrink: 0;
+}
+
+.sub-menu dd {
+    padding: 4px 8px 4px 8px;
+    white-space: nowrap;
+}
+
+.sub-menu .right-box {
+    float: right;
+    width: 168px;
+}
+
+.sub-menu .pic-box {
+    margin: 0px 0px 10px 0px;
+}
+
+.sub-menu .pic-box:last-child {
+    margin: 0px;
+}
