--- a/css/index.css
+++ b/css/index.css
@@ -252,7 +252,7 @@
 
 .slider-box .slider {
     width: 590px;
-    height: 470;
+    height: 470px;
     position: relative;
     /* 图片不能溢出相框 */
     overflow: hidden; 
@@ -261,11 +261,70 @@
 .slider-box .slider ul {
     position: absolute;
     top: 0px;
-    left: 0px;
-    width: 500%;
+    /* left: -590px;
+    width: 500%; */
     height: 100%;
 }
 
 .slider-box .slider ul li {
     float: left;
+}
+
+.slider-box .left-box {
+    background: rgb(0,0,0,0.2);
+    position: absolute;
+    top: 45%;
+    left: 0px;
+    width: 50px;
+    height: 50px;
+    color: #ffffff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+}
+
+.slider-box .right-box {
+    background: rgb(0,0,0,0.2);
+    position: absolute;
+    top: 45%;
+    right: 0px;
+    width: 50px;
+    height: 50px;
+    color: #ffffff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+}
+
+.slider-box .left-box, .slider-box .right-box span {
+    font-size: 24px;
+}
+
+.slider-box .index-box {
+    position: absolute;
+    bottom: 3%;
+    left: 10%;
+}
+
+.slider-box .index-box > ol {
+    height: 14px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    background: rgb(0,0,0,0.6);
+}
+
+.slider-box .index-box > ol > li {
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    background: #ffffff;
+    list-style: none;
+    cursor: pointer;
+}
+
+.slider-box .index-box > ol > li.active {
+    background: #e1251b;
 }
