--- a/css/common.css
+++ b/css/common.css
@@ -3,6 +3,12 @@ body {
     background: #f4f4f4;
 }
 
+.img-wh {
+  width: 590px;
+  height: 595px;
+  /* background-size: contain; */
+}
+
 @font-face {font-family: "iconfont";
     src: url('./font/iconfont.eot?t=1601022465131'); /* IE9 */
     src: url('./font/iconfont.eot?t=1601022465131#iefix') format('embedded-opentype'), /* IE6-IE8 */
