--- a/css/index.css
+++ b/css/index.css
@@ -32,7 +32,7 @@
     position: absolute;
     top: 8px;
     right: 0px;
-    display: block;
+    display: block;/*为什么要加这句话？*/
 }
 
 .navigation-box ul li a:hover {
@@ -71,7 +71,7 @@
     width: 500px;
     height: 30px;
     padding: 2px 10px;
-    outline: none;
+    outline: none;/*为什么要加这句话？*/
 }
 
 .search-bar .search-btn {
@@ -80,7 +80,7 @@
     border: 1px solid #e1251b;
     background: #e1251b;
     cursor: pointer;
-    position: relative;
+    /* position: relative; */
     line-height: 34px;
     text-align: center;
 }
@@ -183,7 +183,7 @@
     top: 0px;
     left: 190px;
     background: #ffffff;
-    z-index: 10px;
+    z-index: 10;
     width: 900px;
     padding: 20px;
     font-size: 12px;
@@ -196,10 +196,10 @@
     max-width: 700px;
 }
 
-.sub-menu .right-box {
+/* .sub-menu .right-box {
     float: right;
     max-width: 160px;
-}
+} */
 
 .sub-menu .menu-title {
     margin: 0px 0px 10px 0px;
@@ -225,12 +225,12 @@
     font-weight: bold;
     width: 60px;
     text-align: right;
-    flex-shrink: 0;
+    flex-shrink: 0;/*为什么要加这句话？*/
 }
 
 .sub-menu dd {
     padding: 4px 8px 4px 8px;
-    /* white-space: nowrap; */
+    /* white-space: nowrap; 不换行*/
 }
 
 .sub-menu .right-box {
@@ -252,7 +252,7 @@
 
 .slider-box .slider {
     width: 590px;
-    height: 470px;
+    height: 100%;
     position: relative;
     /* 图片不能溢出相框 */
     overflow: hidden; 
@@ -261,8 +261,8 @@
 .slider-box .slider ul {
     position: absolute;
     top: 0px;
-    /* left: -590px;
-    width: 500%; */
+    /* left: -590px;     
+    width: 500%; */ /* 为什么可以去掉？ */
     height: 100%;
 }
 
@@ -329,12 +329,47 @@
     background: #e1251b;
 }
 
-.ad-box {
+.ad-box2 {
     width: 190px;
     margin-right: 10px;
 }
 
-.ad-box .pic-box:not(:last-child) {
-    height: 150px;
+.ad-box2 .pic-box:not(:last-child) {
+    height: 190px;
     margin-bottom: 10px;
+}
+
+.info-box {
+    width: 160px;
+    background: #fff;
+    padding: 15px;
+}
+
+.info-box .new-title {
+    font-size: 16px;
+    font-weight: bold;
+    padding-bottom: 10px;
+}
+
+.info-box ul {
+    font-size: 12px;
+}
+
+.info-box ul li {
+    padding: 5px 0px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.info-box ul li a {
+    color: #666666;
+    text-decoration: none;
+}
+
+.info-box ul li a span {
+    color: #e1251b;
+    padding: 2px 4px;
+    background: rgba(225, 37, 27, .08);
+    margin-right: 5px;
 }
